login_class: Fix kqueues, pipebuf resource types

* kqueues is a count but is listed as a size

* pipebuf is a size but is listed as a count

PR:		295623
MFC after:	1 week
Fixes:          a4c04958f526 ("libutil: support RLIMIT_PIPEBUF")
Fixes:          85a0ddfd0b26 ("Add a resource limit for the total...")
Reviewed by:	kib
Differential Revision:	https://reviews.freebsd.org/D57333

(cherry picked from commit b5dce0ae4f78251f56ffcb6c6a58b9e6c20380e0)